Added option for client to refresh list